--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <img src="./asset/logo.png" style="width: 100px; height: 100px;">
+          <img src="./logo.png" style="width: 100px; height: 100px;">
           <h1 id="session0">GREENUP</h1>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,14 +72,14 @@
               </ul>
           </div>
         <div class="flex-item image">
-          <img src="./asset/pic4.jpg" alt="Example Image">
+          <img src="./pic4.jpg" alt="Example Image">
         </div>
     </div>
 
 
     <div class="flex-container">
         <div class="flex-item image">
-            <img src="./asset/pic2.jpg" alt="Example Image">
+            <img src="./pic2.jpg" alt="Example Image">
           </div>
         <div class="flex-item text">
             <ul class="responsive-list">
@@ -96,7 +96,7 @@
             <h1 id="session3">CERTIFICATE</h1>    
         </div>
         <div class="flex-item image">
-          <img src="./asset/certificate.jpg" alt="Example Image">
+          <img src="./certificate.jpg" alt="Example Image">
         </div>
     </div>
 
@@ -109,7 +109,7 @@
           <p><strong>CHINESE:</strong><a href="tel:+85578388838">+85578388838</a> <a href="tel:+85596688828">+85596688828</a></p>
           <p><strong>Address:</strong> 106, St Betong, Choamchoa 2, Posenchey, Phnom Penh, Cambodia</p>
           <div class="qr-code">
-            <img src="./asset/QR.jpg" alt="QR Code"> 
+            <img src="./QR.jpg" alt="QR Code"> 
           </div>
         </div>
     </div>
