--- a/index.html
+++ b/index.html
@@ -13,41 +13,11 @@
 <body>
 
 
-
-    <nav class="navbar bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-          <img src="./logo.png" style="width: 100px; height: 100px;">
-          <h1 id="session0">GREENUP</h1>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#session0">HOME</a>
-                  <a class="nav-link active" aria-current="page" href="#session1">BUSINESS PROPOSAL</a>
-                  <a class="nav-link active" aria-current="page" href="#session2">PROJECT OVERVIEW</a>
-                  <a class="nav-link active" aria-current="page" href="#session3">CERTIFICATE</a>
-                  <a class="nav-link active" aria-current="page" href="#session4">CONTACT US</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
+  <header>
+    <img src="./header.png" alt="Header Image">
+  </header>
 
 
-    <div class="background-container">
-        <div class="overlay-text">
-            <h1>GREENUP <br> CAMBODIA CO.,LTD</h1>
-            <p>Fabric waste exporter since 2012 in Cambodia</p>
-        </div>
-    </div>
 
     <br><br>
 
@@ -87,6 +57,23 @@
                 <li>By collecting and recycling textile waste, we contribute to environmental preservation and reduce pollution.</li>
               </ul>
           </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item image">
+          <img src="./pic6.png" alt="Example Image">
+        </div>
+    </div>
+
+    <div class="flex-container">
+      <div class="flex-item image">
+          <img src="./pic3.jpg" alt="Example Image">
+        </div>
+    </div>
+    <div class="flex-container">
+      <div class="flex-item image">
+          <img src="./pic1.jpg" alt="Example Image">
+        </div>
     </div>
 
 
