--- a/index.html
+++ b/index.html
@@ -12,95 +12,55 @@
 </head>
 <body>
 
-
   <header>
     <img src="./header.png" alt="Header Image">
   </header>
+  
+  <h2>BUSINESS PROPOSAL</h2>
+
+  <ul>
+    <li>Green Up (Cambodia) Co. Ltd focuses on the import and export of fabric waste, specializing in textile waste management.</li>
+    <li>The company has received support from the government, indicating a commitment to sustainable practices and environmental protection.</li>
+    <li>By specializing in textile waste, Green Up plays a crucial role in the recycling and upcycling of materials, contributing to a more sustainable and circular economy.</li>
+    <li>The company's operations not only help reduce textile waste but also promote the reuse of materials, reducing the environmental impact of the fashion and textile industry.</li>
+    <li>Green Up's focus on fabric waste management aligns with global efforts to address the challenges of waste management and promote a more environmentally friendly approach to production and consumption.</li>
+    <li>•	Through its import and export activities, Green Up (Cambodia) Co. Ltd is able to facilitate the recycling and repurposing of textile waste on a larger scale, creating a positive impact on both the environment and the economy.</li>
+  </ul>
+
+  <h2>PROJECT OVERVIEW</h2>
+ 
+  <div class="container">
+    <img src="./new1.jpg" alt="" class="scr">
+    <img src="./new2.jpg" alt="" class="scr">
+    <img src="./new3.jpg" alt="" class="scr">
+    <img src="./new4.jpg" alt="" class="scr">
+    <img src="./new5.jpg" alt="" class="scr">
+    <img src="./new6.jpg" alt="" class="scr">
+  </div>
+
+  <ul>
+    <li>Our team meticulously sorts the textile waste by type and color to prepare it for recycling.</li>
+    <li>The recycled textiles are then exported to foreign markets where they are transformed into usable products.</li>
+    <li>Our primary goal is to minimize the accumulation of unwanted fabric in landfills or incinerators. </li>
+    <li>By collecting and recycling textile waste, we contribute to environmental preservation and reduce pollution. </li>
+  </ul>
 
 
+  <div class="container-certificate">
+    <img src="./certificate.jpg" alt="Responsive Image">
+  </div>
 
-    <br><br>
-
-   <div class="body">
-    <h1 id="session1">BUSINESS PROPOSAL</h1>
-
-    <ul class="responsive-list">
-        <li>Green Up (Cambodia) Co. Ltd focuses on the import and export of fabric waste, specializing in textile waste management.</li>
-        <li>The company has received support from the government, indicating a commitment to sustainable practices and environmental protection.</li>
-        <li>By specializing in textile waste, Green Up plays a crucial role in the recycling and upcycling of materials, contributing to a more sustainable and circular economy.</li>
-        <li>The company's operations not only help reduce textile waste but also promote the reuse of materials, reducing the environmental impact of the fashion and textile industry.</li>
-        <li>Green Up's focus on fabric waste management aligns with global efforts to address the challenges of waste management and promote a more environmentally friendly approach to production and consumption.</li>
-        <li>Through its import and export activities, Green Up (Cambodia) Co. Ltd is able to facilitate the recycling and repurposing of textile waste on a larger scale, creating a positive impact on both the environment and the economy.</li>
-      </ul>
-
-    <div class="flex-container">
-        <div class="flex-item text">
-            <h1 id="session2">PROJECT OVERVIEW</h1>
-            <ul class="responsive-list">
-                <li>Our team meticulously sorts the textile waste by type and color to prepare it for recycling.</li>
-                <li>The recycled textiles are then exported to foreign markets where they are transformed into usable products.</li>
-              </ul>
-          </div>
-        <div class="flex-item image">
-          <img src="./pic4.jpg" alt="Example Image">
+  <div class="bottom-sheet">
+    <div class="content">
+      <h2 id="session4">Contact Information</h2>
+        <p><strong>ENGLISH:</strong><a href="tel:+85570877811">+85570877811</a></p>
+        <p><strong>CHINESE:</strong><a href="tel:+85578388838">+85578388838</a> <a href="tel:+85596688828">+85596688828</a></p>
+        <p><strong>Address:</strong> 106, St Betong, Choamchoa 2, Posenchey, Phnom Penh, Cambodia</p>
+        <div class="qr-code">
+          <img src="./QR.jpg" alt="QR Code"> 
         </div>
     </div>
-
-
-    <div class="flex-container">
-        <div class="flex-item image">
-            <img src="./pic2.jpg" alt="Example Image">
-          </div>
-        <div class="flex-item text">
-            <ul class="responsive-list">
-                <li>Our primary goal is to minimize the accumulation of unwanted fabric in landfills or incinerators.</li>
-                <li>By collecting and recycling textile waste, we contribute to environmental preservation and reduce pollution.</li>
-              </ul>
-          </div>
-    </div>
-
-    <div class="flex-container">
-      <div class="flex-item image">
-          <img src="./pic6.png" alt="Example Image">
-        </div>
-    </div>
-
-    <div class="flex-container">
-      <div class="flex-item image">
-          <img src="./pic3.jpg" alt="Example Image">
-        </div>
-    </div>
-    <div class="flex-container">
-      <div class="flex-item image">
-          <img src="./pic1.jpg" alt="Example Image">
-        </div>
-    </div>
-
-
-
-    <div class="flex-container">
-        <div class="flex-item text">
-            <h1 id="session3">CERTIFICATE</h1>    
-        </div>
-        <div class="flex-item image">
-          <img src="./certificate.jpg" alt="Example Image">
-        </div>
-    </div>
-
-
-
-    <div class="bottom-sheet">
-        <div class="content">
-          <h2 id="session4">Contact Information</h2>
-          <p><strong>ENGLISH:</strong><a href="tel:+85570877811">+85570877811</a></p>
-          <p><strong>CHINESE:</strong><a href="tel:+85578388838">+85578388838</a> <a href="tel:+85596688828">+85596688828</a></p>
-          <p><strong>Address:</strong> 106, St Betong, Choamchoa 2, Posenchey, Phnom Penh, Cambodia</p>
-          <div class="qr-code">
-            <img src="./QR.jpg" alt="QR Code"> 
-          </div>
-        </div>
-    </div>
-   </div>
+  </div>
 
 </body>
 </html>
